--- a/portfolio.html
+++ b/portfolio.html
@@ -15,43 +15,108 @@
     <header>
     <div class="container page-header">
         <a href="./index.html" lang="en" class="link logo"><span class="logo__part">Web</span>Studio</a>
-        <nav class="nav js-menu-container">
-            <button type="button" class="nav__button is-open js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                <svg class="menu" width="40" height="40" aria-label="Переключатель мобильного меню">
-                    <use class="nav__icon-menu" href="./images/sprite.svg#icon-menu" />
-                    <use class="nav__icon-cross" href="./images/sprite.svg#icon-cross" />        
+        <nav class="nav">
+        <ul class="list nav__list">
+            <li><a href="./index.html" class="link nav__link">Cтудия</a></li>
+            <li><a href="./portfolio.html" class="link nav__link nav__link--current">Портфолио</a></li>
+            <li><a href="" class="link nav__link">Контакты</a></li>
+        </ul>
+        </nav>
+        <ul class="list contacts">
+            <li class="contacts__item">
+                <a class="link contacts__link" href="mailto:info@devstudio.com">
+                <svg class="contacts__icon contacts__icon--mail" width="16" height="12">
+                    <use href="./images/sprite.svg#icon-mail">
                 </svg>
+                info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="link contacts__link" href="tel:+380961111111">
+                <svg class="contacts__icon contacts__icon--tel" width="10" height="16">
+                    <use href="./images/sprite.svg#icon-tel"></svg>
+                +38 096 111 11 11</a>
+            </li>
+        </ul>
+        <button type="button" class="menu__open">
+            <svg class="menu__icon" width="40" height="40">
+                <use href="./images/sprite.svg#icon-menu"></use>
+            </svg>
             </button>
-            <div class="nav__menu">
-                <ul class="list nav__list">
-                    <li><a href="./index.html" class="link nav__link">Cтудия</a></li>
-                    <li><a href="./portfolio.html" class="link nav__link nav__link--current">Портфолио</a></li>
-                    <li><a href="" class="link nav__link">Контакты</a></li>
-                </ul>        
-                <ul class="list contacts">
-                    <li>
-                        <a class="link contacts__link" href="mailto:info@devstudio.com">
-                        <svg class="contacts__icon" width="16" height="12">
-                            <use href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
-                        info@devstudio.com</a>
+        </div>
+        <div class="menu is-hidden">
+            <div class="menu__top">
+                <button type="button" class="menu__close">
+                <svg class="menu__icon" width="40" height="40">
+                    <use href="./images/sprite.svg#icon-cross"></use>
+                </svg>
+                </button>
+                <nav class="menu__nav">
+                <ul class="menu__list list">
+                    <li class="menu__item">
+                    <a href="./index.html" class="link menu__link">Студия</a>
                     </li>
-                    <li>
-                        <a class="link contacts__link" href="tel:+380961111111">
-                        <svg class="contacts__icon" width="10" height="16">
-                            <use href="./images/sprite.svg#icon-tel"></use></svg>
-                        +38 096 111 11 11</a>
+                    <li class="menu__item">
+                    <a href="./portfolio.html" class="link menu__link menu__link--current">Портфолио</a>
+                    </li>
+                    <li class="menu__item">
+                    <a href="#" class="link menu__link">Контакты</a>
                     </li>
                 </ul>
-                <ul class="list nav__sn">
-                    <li class="nav__social"><a class="link" href="#">Instagram</a></li>
-                    <li class="nav__social"><a class="link" href="#">Twitter</a></li>
-                    <li class="nav__social"><a class="link" href="#">Facebook</a></li>
-                    <li class="nav__social"><a class="link" href="#">Linkedin</a></li>
+                </nav>
+            </div>
+            <div class="menu__bottom">
+                <ul class="menu__list list">
+                    <li class="menu__item">
+                    <a href="tel:+380961111111" class="link menu__tel"
+                        >+38 096 111 11 11</a
+                    >
+                    </li>
+                    <li class="menu__item">
+                    <a href="mailto:info@devstudio.com" class="link menu__mail"
+                        >info@devstudio.com</a
+                    >
+                    </li>
+                </ul>
+                <ul class="menu__socials list">
+                    <li class="menu__social">
+                        <a
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer nofollow"
+                        class="menu__soc link"
+                        >Instagram</a
+                        >
+                    </li>
+                    <li class="menu__social">
+                        <a
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer nofollow"
+                        class="menu__soc link" 
+                        >Twitter</a
+                        >
+                    </li>
+                    <li class="menu__social">
+                        <a
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer nofollow"
+                        class="menu__soc link"
+                        >Facebook</a
+                        >
+                    </li>
+                    <li class="menu__social">
+                        <a
+                        href=""
+                        target="_blank"
+                        rel="noopener noreferrer nofollow"
+                        class="menu__soc link"
+                        >LinkedIn</a
+                        >
+                    </li>
                 </ul>
             </div>
-        </nav>
-    </div>
+        </div>
     </header>
     <main>
       <section class="section">
@@ -200,7 +265,7 @@
                     <source srcset="./images/portfolio/7project-top.jpg 1x, ./images/portfolio/7project-top2x.jpg 2x" media="(min-width: 1200px)">
                     <source srcset="./images/portfolio/7project-tab.jpg 1x, ./images/portfolio/7project-tab2x.jpg 2x" media="(min-width: 768px)">
                     <source srcset="./images/portfolio/7project-mob.jpg 1x, ./images/portfolio/7project-mob2x.jpg 2x" media="(max-width: 767px)">
-                    <img src="./images/portfolio/7project-mob.jpg" alt="Издание Limited Edition"/>
+                    <img src="./images/portfolio/7project-mob.jpg" alt="Издание Limited Edition" class="product__image"/>
                   </picture>
                   <p class="product__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -262,59 +327,63 @@
     </main>
     <footer>
     <div class="container page-footer">
-        <div>
-        <a href="./index.html" lang="en" class="link logo"
-            ><span class="logo__part">Web</span>Studio</a
-        >
-        <address>
-            <ul class="address list">
-            <li>
-                <a href="https://goo.gl/maps/jvZkEeuZgT2ocz416"
-                rel="noopener nofollow noreferrer"
-                class="link address__location">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="address__item">
-                <a href="mailto:info@example.com" class="link address__contacts">info@example.com</a>
-            </li>
-            <li class="address__item">
-                <a href="tel:+380991111111" class="link address__contacts">+38 099 111 11 11</a>
-            </li>
-            </ul>
-        </address>
+        <div class="page-footer__tab">
+            <div>
+                <a href="./index.html" lang="en" class="link logo"
+                    ><span class="logo__part">Web</span>Studio</a
+                >
+                <address>
+                    <ul class="address list">
+                    <li>
+                        <a href="https://goo.gl/maps/jvZkEeuZgT2ocz416"
+                        rel="noopener nofollow noreferrer"
+                        class="link address__location">г. Киев, пр-т Леси Украинки, 26</a
+                        >
+                    </li>
+                    <li class="address__item">
+                        <a href="mailto:info@example.com" class="link address__contacts"                >info@example.com</a>
+                    </li>
+                    <li class="address__item">
+                        <a href="tel:+380991111111" class="link address__contacts">+38 099 111 11 11</a>
+                    </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer__div">
+                <strong class="page-footer__heading">присоединяйтесь</strong>
+                <ul class="list social">
+                    <li>
+                    <a href="#" class="link social__link">
+                        <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram" />
+                        </svg>
+                    </a>
+                    </li>
+                    <li>
+                    <a href="#" class="link social__link">
+                        <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter" />
+                        </svg>
+                    </a>
+                    </li>
+                    <li>
+                    <a href="#" class="link social__link">
+                        <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook" />
+                        </svg>
+                    </a>
+                    </li>
+                    <li>
+                    <a href="#" class="link social__link">
+                        <svg width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin" />
+                        </svg>
+                    </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="footer__div">
-        <strong class="page-footer__heading">присоединяйтесь</strong>
-        <ul class="list social">
-            <li>
-            <a href="#" class="link social__link">
-                <svg width="20" height="20">
-                <use href="./images/sprite.svg#icon-instagram" />
-                </svg>
-            </a>
-            </li>
-            <li>
-            <a href="#" class="link social__link">
-                <svg width="20" height="20">
-                <use href="./images/sprite.svg#icon-twitter" />
-                </svg>
-            </a>
-            </li>
-            <li>
-            <a href="#" class="link social__link">
-                <svg width="20" height="20">
-                <use href="./images/sprite.svg#icon-facebook" />
-                </svg>
-            </a>
-            </li>
-            <li>
-            <a href="#" class="link social__link">
-                <svg width="20" height="20">
-                <use href="./images/sprite.svg#icon-linkedin" />
-                </svg>
-            </a>
-            </li>
-        </ul>
-        </div>
+        
         <div class="footer__div footer__div--alignment">
         <strong class="page-footer__heading">подпишитесь на рассылку</strong>
         <form class="send">
@@ -331,5 +400,6 @@
         </div>
     </div>
     </footer>
+    <script src="./menu.js"></script>
   </body>
 </html>
