--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <a class="link contacts__link" href="mailto:info@devstudio.com">
                 <svg class="contacts__icon contacts__icon--mail" width="16" height="12">
                     <use href="./images/sprite.svg#icon-mail">
-                </svg>
-                info@devstudio.com</a>
+                </svg>info@devstudio.com</a>
             </li>
             <li>
                 <a class="link contacts__link" href="tel:+380961111111">
